updated the code to use the names and not IDs for class connection